added a minimized version of homepage and tested the authentication views to access homepage. Test passed. Moving to create ticket submission views on a seperate branch submit.

--- a/templates/signuppage.html
+++ b/templates/signuppage.html
@@ -6,5 +6,5 @@
     {% csrf_token %}
     {{form.as_p}}
 <input type="submit" value="Submit"> <span>or</span>
-<a href="/signup/">Sign up if you don't have an account</a>
+<a href="/login/">Login to submit your ticket</a>
 </form>
