--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,8 +1,13 @@
-<h1>{{username}} Profile Page</h1>
+<h1>{{username}}'s Ticket Profile Page</h1>
+<a href="/">Home</a>
+<a href="/logout/"><button>Logout</button></a>
 <p><h1>Tickets</h1></p>
 
+<h1>Tickets Filed</h1>
 {% for d in data %}
+{% if d.ticket_status == "NE" %}
     <ul>
+        <p><a href="/ticket_create/edit/{{d.id}}/"><button>Edit</button></a></p>
         <p>Ticket Number: {{d.id}}</p>
         <p>Ticket Status: {{d.ticket_status}}</p>
         <p>Issue: {{d.title}}</p>
@@ -11,4 +16,37 @@
         <p>Date Submitted: {{d.created_at}}</p>
         <br>
     </ul>
+{% endif %}
+{% endfor %}
+
+<h1>Tickets In Progress</h1>
+{% for d in data %}
+{% if d.ticket_status == "IP" %}
+    <ul>
+        <p><a href="/ticket_create/edit/{{d.id}}/"><button>Edit</button></a></p>
+        <p>Ticket Number: {{d.id}}</p>
+        <p>Ticket Status: {{d.ticket_status}}</p>
+        <p>Issue: {{d.title}}</p>
+        <p>Bug: {{d.bug}}</p>
+        <p>Submittted by: {{d.username}}</p>
+        <p>Date Submitted: {{d.created_at}}</p>
+        <br>
+    </ul>
+{% endif %}
+{% endfor %}
+
+<h1>Tickets Completed</h1>
+{% for d in data %}
+{% if d.ticket_status == "DO" %}
+    <ul>
+        <p><a href="/ticket_create/edit/{{d.id}}/"><button>Edit</button></a></p>
+        <p>Ticket Number: {{d.id}}</p>
+        <p>Ticket Status: {{d.ticket_status}}</p>
+        <p>Issue: {{d.title}}</p>
+        <p>Bug: {{d.bug}}</p>
+        <p>Submittted by: {{d.username}}</p>
+        <p>Date Submitted: {{d.created_at}}</p>
+        <br>
+    </ul>
+{% endif %}
 {% endfor %}
